# vision-ml-system

./: .dvcignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  INTERVIEW_PLAYBOOK.md  LICENSE  README.md  WORKPLAN.md  docker-compose.yml  dvc.yaml  frontend_spec.md  home.py  main.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml
config/: README.md
config/inference/: base.yaml
config/training/: base.yaml
docs/: DEVELOPMENT.md  INDEX.md
docs/architecture/: REPO_ARCHITECTURE.md  STRATEGY.md  System Design.md  (+2 more)
examples/: demo_benchmark.py  demo_drift.py  demo_dvc.py  demo_inference.py  demo_training.py  generate_sample_video.py
frontend/: package-lock.json  package.json
notebooks/: train_cloud.ipynb  training_ingestion_hardening_guide.ipynb
pages/: 1_inference.py  2_auto_labeling.py  3_analytics.py  4_training.py  5_mlflow_experiments.py  6_model_registry.py  7_training_pipeline.py
scripts/: README.md  analytics_cli.py  auto_labeling_cli.py  dvc_cli.py  evaluate.py  generate_tracker.py  inference.py  mlflow_cli.py  model_registry_cli.py  pipeline_cli.py  prepare_data.py  secondary_detector_batch.py  train.py
shell_scripts/: test_roboflow_pipeline.sh
tests/: conftest.py  test_analytics.py  test_annotator.py  test_api.py  test_auto_labeler.py  test_circuit_breaker.py  test_config.py  test_detection.py  test_detector_factory.py  test_drift.py  test_dual_detector.py  test_model_registry.py  test_pipeline.py  test_prepare_data_ingestion.py  test_tracker_factory.py  test_training_events.py  test_visitor_analytics.py
(+84 files in other folders)
